--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
-:root {
-    --cor-de-fundo: #EBECEE;
+@import url("styles/header.css");
+    :root {
+        --cor-de-fundo: #EBECEE;
+        --branco: #FFFFFF;
 }
 body {
     background-color: var(--cor-de-fundo);
@@ -7,3 +9,6 @@ body {
 h1 {
     background-color: white;
 }
+
+
+
