--- a/style.css
+++ b/style.css
@@ -3,11 +3,43 @@
         --cor-de-fundo: #EBECEE;
         --branco: #FFFFFF;
 }
-body {
-    background-color: var(--cor-de-fundo);
+.cabeçalho {
+    background-color: var(--branco);
 }
-h1 {
-    background-color: white;
+<header class="cabeçalho">
+    <div class="container">
+        <span class="cabeçalho__menu-hamburguer"></span>
+        <img src="img/Logo.svg" alt="Logo da AluraBooks">
+    </div>
+    <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
+    <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
+    <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"></a>
+</header>
+<header class="cabeçalho">
+    <div class="container">
+        <span class="cabeçalho__menu-hamburguer"></span>
+        <img src="img/Logo.svg" alt="Logo da AluraBooks">
+    </div>
+    <div class="container">
+        <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
+        <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
+        <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"></a>
+    </div>
+</header>
+.cabeçalho {
+    background-color: var(--branco);
+    display: flex;
+    justify-content: space-between;
+}
+.cabeçalho {
+    background-color: var(--branco);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.container {
+    display: flex;
+    align-items: center;
 }
 
 
