--- a/style.css
+++ b/style.css
@@ -4,25 +4,7 @@
         --branco: #FFFFFF;
 }
 .cabeçalho {
-    background-color: var(--branco);
-}
-<header class="cabeçalho">
-    <div class="container">
-        <span class="cabeçalho__menu-hamburguer"></span>
-        <img src="img/Logo.svg" alt="Logo da AluraBooks">
-    </div>
-    <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
-    <a href="#"><img src="img/Compras.svg" alt="Carrinho de compras"></a>
-    <a href="#"><img src="img/Usuario.svg" alt="Meu perfil"></a>
-</header>
-<header class="cabeçalho">
-    <div class="container">
-        <span class="cabeçalho__menu-hamburguer"></span>
-        <img src="img/Logo.svg" alt="Logo da AluraBooks">
-    </div>
-    <div class="container">
-        <a href="#"><img src="img/Favoritos.svg" alt="Meus favoritos"></a>
-        <a href="#"><img src="img/Com
+    background-color: var(--branco)
 .cabeçalho {
     background-color: var(--branco);
     display: flex;
@@ -34,10 +16,5 @@
     justify-content: space-between;
     align-items: center;
 }
-.container {
-    display: flex;
-    align-items: center;
-}
-
 
 
