--- a/header.css
+++ b/header.css
@@ -19,4 +19,12 @@ align-items: center;
 .container_imagem{
 padding:lem;
 }
+.lista-menu{
+    display: none;
+}
+ .container_botão:checked ~ .lista-menu {
+    display: block;
+
+}
+
 
